--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.10"
+    "@types/better-sqlite3": "^7.6.10",
+    "prisma": "^5.15.0"
   }
 }
