--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@prisma/client": "5.15.0",
     "better-sqlite3": "^11.0.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
